Update rhel.jboss.md